update the partner styles, fix page anchors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="about">
       <div class="columns small-12">
         <h3>The Steering Committee</h3>
       </div>
@@ -76,7 +76,7 @@
           recommendations.</p>
       </div>
       <div class="columns small-12 medium-5">
-        <a href="#" class="button round">Steering Committee Members</a>
+        <a href="#steering-committee-members" class="button round">Steering Committee Members</a>
       </div>
     </div>
     <div class="row">
@@ -161,33 +161,34 @@
 
     <hr>
 
-    <div class="row">
+    <div class="row" id="steering-committee-members">
       <div class="columns">
         <h3 class="some-margin-bottom">Steering Committee Members</h3>
-        <ul class="v-aligned-list small-block-grid-2 medium-block-grid-3 large-block-grid-4" data-equalizer data-options="equalize_on_stack: true">
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>32BJ</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Artimus Construction</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Business Development Center&mdash;Union Settlement</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>CIVITAS</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span><strong>Community Board 11</strong></span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span><strong>Community Voices Heard</strong></span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Councilmember Inez&nbsp;Dickens</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>El Barrio's Operation Fightback</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>El Museo Del Barrio</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Harlem RBI</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Johnson Houses Tenant Association&mdash;Ethel Velez</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Local 79</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span><strong>Manhattan Borough President Gale Brewer</strong></span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>New York Academy of Medicine</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>New York Restoration Project</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Renaissance Charter High School for Innovation</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Rev. Patricia Singletary, Elmendorf Reformed Church</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span><strong>Speaker Melissa Mark-Viverito</strong></span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>Union Settlement&mdash;David Nocenti</span></div></li>
-          <li class="text-center"><div class="panel no-margin" data-equalizer-watch><span>WEACT</span></div></li>
+        <ul class="v-aligned-list small-block-grid-1 medium-block-grid-2 large-block-grid-4" data-equalizer data-options="equalize_on_stack: true">
+          <li class="text-center"><a href="http://www.seiu32bj.org/"><div class="panel no-margin" data-equalizer-watch>32BJ</div></a></li>
+          <li class="text-center"><a href="http://www.artimusnyc.com/"><div class="panel no-margin" data-equalizer-watch>Artimus Construction</div></a></li>
+          <li class="text-center"><a href="http://unionsettlement.org/programs/business-development/"><div class="panel no-margin" data-equalizer-watch>Business Development Center&mdash;Union Settlement</div></a></li>
+          <li class="text-center"><a href="http://civitasnyc.org/"><div class="panel no-margin" data-equalizer-watch>CIVITAS</div></a></li>
+          <li class="text-center"><a href="http://www.cb11m.org/"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Community Board 11</strong></div></a></li>
+          <li class="text-center"><a href="http://www.cvhaction.org/"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Community Voices Heard</strong></div></a></li>
+          <li class="text-center"><a href="http://council.nyc.gov/d9/html/members/home.shtml"><div class="panel no-margin" data-equalizer-watch>Council Member Inez&nbsp;Dickens</div></a></li>
+          <li class="text-center"><a href="http://www.ebofb.org/"><div class="panel no-margin" data-equalizer-watch>El Barrio's Operation Fightback</div></a></li>
+          <li class="text-center"><a href="http://www.elmuseo.org/"><div class="panel no-margin" data-equalizer-watch>El Museo Del Barrio</div></a></li>
+          <li class="text-center"><a href="https://www.harlemrbi.org/"><div class="panel no-margin" data-equalizer-watch>Harlem RBI</div></a></li>
+          <li class="text-center"><a href="http://www.nyc.gov/html/nycha/html/residents/manhattanN.shtml"><div class="panel no-margin" data-equalizer-watch>Johnson Houses Tenant Association&mdash;Ethel Velez</div></a></li>
+          <li class="text-center"><a href="http://www.local79.org/"><div class="panel no-margin" data-equalizer-watch>Local 79</div></a></li>
+          <li class="text-center"><a href="http://manhattanbp.nyc.gov/html/home/home.shtml"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Manhattan Borough President Gale Brewer</strong></div></a></li>
+          <li class="text-center"><a href="http://www.nyam.org/"><div class="panel no-margin" data-equalizer-watch>New York Academy of Medicine</div></a></li>
+          <li class="text-center"><a href="https://www.nyrp.org/"><div class="panel no-margin" data-equalizer-watch>New York Restoration Project</div></a></li>
+          <li class="text-center"><a href="http://www.innovationhighschool.org/"><div class="panel no-margin" data-equalizer-watch>Renaissance Charter High School for Innovation</div></a></li>
+          <li class="text-center"><a href="http://churches.rca.org/elmendorf/pastor.html"><div class="panel no-margin" data-equalizer-watch>Rev. Patricia Singletary, Elmendorf Reformed Church</div></a></li>
+          <li class="text-center"><a href="http://council.nyc.gov/d8/html/members/home.shtml"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Speaker Melissa Mark-Viverito</strong></div></a></li>
+          <li class="text-center"><a href="http://unionsettlement.org/"><div class="panel no-margin" data-equalizer-watch>Union Settlement&mdash;David Nocenti</div></a></li>
+          <li class="text-center"><a href="http://weact.nationbuilder.com/"><div class="panel no-margin" data-equalizer-watch>WEACT</div></a></li>
         </ul>
-        <div class="some-padding-bottom"><em class="">* Project Partners in bold will help pull together the topic sub-groups,
-        steering committee, and community visioning workshops.</em></div>
+        <div class="alert-box alert radius"><em class="">* Project Partners will help
+          pull together the topic sub-groups, steering committee, and community
+          visioning workshops.</em></div>
       </div>
     </div>
 
