add process worflow diagram

--- a/index.html
+++ b/index.html
@@ -66,6 +66,78 @@
     </div>
 
     <div class="row" id="about">
+      <div class="columns large-5">
+        <div class="row">
+          <div class="columns small-4 medium-2 large-4">
+            <img src="images/process-workshop.png">
+          </div>
+          <div class="columns small-8 medium-10 large-8">
+            <h4 class="some-padding-top"><span class="red">1</span> Community Visioning Workshops</h4>
+            <p class="text-small no-margin">Residents learn about programs and policies that directly
+              impact East Harlem and share their ideas, needs, and concerns.</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns large-1 show-for-large-up">
+        <img src="images/process-arrow-right.png" class="extra-margin-top">
+      </div>
+      <div class="columns large-5 large-pull-1">
+        <div class="row">
+          <div class="columns small-4 medium-2 large-4">
+            <img src="images/process-meeting.png">
+          </div>
+          <div class="columns small-8 medium-10 large-8">
+            <h4 class="some-padding-top"><span class="red">2</span> Steering Committee Meetings</h4>
+            <p class="text-small no-margin">Community representatives incorporate the community's feedback into
+              recommendations and proposals.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row show-for-large-up">
+      <div class="columns large-1 large-centered">
+        <img src="images/process-arrow-downleft.png" class="some-margin-bottom">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="columns large-5 large-push-1">
+        <div class="row">
+          <div class="columns small-4 medium-2 large-4">
+            <img src="images/process-presentation.png">
+          </div>
+          <div class="columns small-8 medium-10 large-8">
+            <h4 class="some-padding-top"><span class="red">3</span> Public Presentation of Draft Plan</h4>
+            <p class="text-small no-margin">Residents review the Draft Plan and have a final chance to share
+              their ideas, letting us know if we got it right.</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns large-1 large-push-1 show-for-large-up">
+        <img src="images/process-arrow-right.png" class="extra-margin-top">
+      </div>
+      <div class="columns large-5">
+        <div class="row">
+          <div class="columns small-4 medium-2 large-4">
+            <img src="images/process-final.png">
+          </div>
+          <div class="columns small-8 medium-10 large-8">
+            <h4 class="some-padding-top"><span class="red">4</span> Final East Harlem Neigborhood Plan</h4>
+            <p class="text-small no-margin">
+              Presented to the Department of City Planning, the Final Plan informs neighborhood
+              rezoning. It will also be presented to other city agencies and elected officials to
+              inform their work, and will be readily available to residents.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
       <div class="columns small-12">
         <h3>The Steering Committee</h3>
       </div>
