change intro text

--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
         <h1><img src="images/east-harlem-neighborhood-plan.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
       </div>
       <div class="columns small-12 large-7 extra-padding-top">
-        <p class="text-large">The Mayor has announced that East Harlem is one of the
-        communities that is set to be rezoned to facilitate building
-        more affordable housing. As the City considers these zoning
-        changes, Speaker Melissa Mark-Viverito has formed a
-        Neighborhood Study Steering Committee, which will ensure
-        that a broader set of neighborhood needs is being considered
-        and that the voice of the community informs the proposal.</p>
+        <p class="text-xlarge">East Harlem will soon be rezoned to allow the building of
+          more affordable housing. To make sure the community’s voice is heard in this
+          process, Speaker Melissa Mark-Viverito has initiated a Steering Committee to
+          create the East&nbsp;Harlem Neighborhood Plan.</p>
       </div>
     </div>
 
