--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <div class="panel relative">
           <span class="corner-bubble">&#10106;</span>
-          <p class="no-margin"><strong>Zoning/Land Use</strong> <small class="jumbo"><em>led by CIVTAS</em></small></p>
+          <p class="no-margin"><strong>Zoning/Land Use</strong> <small class="jumbo"><em>led by CIVITAS</em></small></p>
           <p class="no-margin"><strong>Affordable Housing Development</strong> <small class="jumbo"><em>led by Lott CDC</em></small></p>
         </div>
       </div>
