style changes per identity guidelines, swap GCal id

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex"><!-- TODO: Remove this for search indexing -->
     <title>East Harlem Neighborhood Plan</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400italic,700italic,400,700|Pacifico" rel='stylesheet' type='text/css'>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400italic,700italic,400,700|Pacifico" rel='stylesheet' type='text/css'> -->
+    <link href='https://fonts.googleapis.com/css?family=Chivo:400,900|Yesteryear' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -57,8 +58,8 @@
 
     <div class="row full-width callout">
       <div class="columns large-10 large-centered text-center">
-        <h2 class="charcoal">We're working with <span class="underline">you</span> to create a neighborhood plan based on the
-          <span class="nowrap-medium-up">community's needs</span>.</h2>
+        <h3 class="">We're working with <span class="underline">you</span> to create a neighborhood plan based on the
+          <span class="nowrap-medium-up">community's needs</span>.</h3>
       </div>
     </div>
 
@@ -145,7 +146,7 @@
           recommendations.</p>
       </div>
       <div class="columns small-12 medium-5">
-        <a href="#steering-committee-members" class="button round">Steering Committee Members</a>
+        <a href="#steering-committee-members" class="button box-shadow">Steering Committee Members</a>
       </div>
     </div>
     <div class="row">
@@ -162,7 +163,7 @@
           Committee will be addressing. The public is invited to participate in
           identifying needs and concerns to help create a vision for the future
           of East Harlem.</p>
-          <a href="#calendar" class="button round">View the Calendar</a>
+          <a href="#calendar" class="button box-shadow">View the Calendar</a>
       </div>
       <div class="columns small-11 medium-10 medium-pull-1 large-6 large-pull-0">
         <h3 class="">Topics</h3>
@@ -206,7 +207,7 @@
           workshops and events, and provide valuable input on our process.</p>
       </div>
       <div class="columns medium-5">
-        <a class="button round">Fill out our survey!</a>
+        <a class="button box-shadow">Fill out our survey!</a>
       </div>
     </div>
     <div class="row">
@@ -224,7 +225,7 @@
           <li><a href="">Community Workshop Notes &amp; Presentations</a></li>
           <li><a href="">Steering Committee Notes &amp; Presentations</a></li>
         </ul>
-        <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button round"><img src="images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
+        <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button box-shadow"><img src="images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
       </div>
     </div>
 
@@ -255,7 +256,7 @@
           <li class="text-center"><a href="http://unionsettlement.org/"><div class="panel no-margin" data-equalizer-watch>Union Settlement&mdash;David Nocenti</div></a></li>
           <li class="text-center"><a href="http://weact.nationbuilder.com/"><div class="panel no-margin" data-equalizer-watch>WEACT</div></a></li>
         </ul>
-        <div class="alert-box alert radius"><em class="">* Project Partners will help
+        <div class="alert-box alert box-shadow"><em class="">* Project Partners will help
           pull together the topic sub-groups, steering committee, and community
           visioning workshops.</em></div>
       </div>
