add google docs

--- a/index.html
+++ b/index.html
@@ -221,10 +221,9 @@
         <h4>Stay up to date!</h4>
         <p class="tiny-margin-bottom">We're still working on the East Harlem Neighborhood Plan. But here's
           the direction we are heading in so far.</p>
-        <ul class="">
-          <li><a href="">Community Workshop Notes &amp; Presentations</a></li>
-          <li><a href="">Steering Committee Notes &amp; Presentations</a></li>
-        </ul>
+        <div class="google-drive some-margin-bottom">
+          <iframe src="https://drive.google.com/embeddedfolderview?id=0B9LJ90BaDIDHflliN0hrRkJHd0QtMWRMOW5GRjEwSGlKak01OVhlLWU3SUw1QlRfbWdFc3M#list" width="800" height="600" frameborder="0"></iframe>
+        </div>
         <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button box-shadow"><img src="images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
       </div>
     </div>
