--- a/index.html
+++ b/index.html
@@ -49,17 +49,25 @@
         <h1><img src="images/east-harlem-neighborhood-plan.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
       </div>
       <div class="columns small-12 large-7 extra-padding-top">
-        <p class="text-xlarge">East Harlem will soon be rezoned to allow the building of
+        <!-- <p class="text-xlarge">East Harlem will soon be rezoned to allow the building of
           more affordable housing. To make sure the community’s voice is heard in this
           process, Speaker Melissa Mark-Viverito has initiated a Steering Committee to
-          create the East&nbsp;Harlem Neighborhood Plan.</p>
+          create the East&nbsp;Harlem Neighborhood Plan.</p> -->
+        <p class="text-large">The goal of the East Harlem Neighborhood Plan is to
+          develop a clear community-based strategy that will reflect an implementable
+          vision for the Neighborhood. Council Speaker Melissa Mark-Viverito along
+          with Community Board 11, Community Voices Heard, and Manhattan Borough
+          President Gale Brewer are leading an effort to engage community stakeholders
+          and local residents in a robust conversation about the future of the East Harlem.</p>
       </div>
     </div>
 
     <div class="row full-width callout">
       <div class="columns large-10 large-centered text-center">
-        <h3 class="">We're working with <span class="underline">you</span> to create a neighborhood plan based on the
-          <span class="nowrap-medium-up">community's needs</span>.</h3>
+        <h3 class="">We're working with <span class="underline">you</span> to create a
+          <span class="nowrap-medium-up">neighborhood plan</span> based on
+          <span class="nowrap-medium-up">the needs</span> of the
+          <span class="nowrap-medium-up">East Harlem community</span>.</h3>
       </div>
     </div>
 
@@ -121,11 +129,11 @@
             <img src="images/process-final.png">
           </div>
           <div class="columns small-8 medium-10 large-8">
-            <h4 class="some-padding-top"><span class="red">4</span> Final East Harlem Neigborhood Plan</h4>
+            <h4 class="some-padding-top"><span class="red">4</span> Final East Harlem Neighborhood Plan</h4>
             <p class="text-small no-margin">
-              Presented to the Department of City Planning, the Final Plan informs neighborhood
-              rezoning. It will also be presented to other city agencies and elected officials to
-              inform their work, and will be readily available to residents.
+              Presented to the Department of City Planning, the Final Plan will inform the
+              neighborhood rezoning. It will also be presented to other city agencies and
+              elected officials to inform their work, and will be readily available to residents.
             </p>
           </div>
         </div>
@@ -135,7 +143,7 @@
 
     <hr>
 
-    <div class="row">
+    <div class="row some-margin-bottom">
       <div class="columns small-12">
         <h3>The Steering Committee</h3>
       </div>
@@ -152,25 +160,24 @@
     <div class="row">
       <div class="columns small-12 large-5">
         <h3>Sub-Groups</h3>
-        <p>Representatives from the Steering Committee will convene smaller
+        <p class="extra-margin-bottom">Representatives from the Steering Committee will convene smaller
           groups on specific topics, and will invite experts and other
           advocates to participate. They will meet prior to Steering Committee
           meetings to organize existing information, identify priorities, and
           draft recommendations.</p>
-        <hr class="show-for-large-up">
         <h3>Community Visioning Workshops</h3>
-        <p>There will be five workshops organized around topics that the Steering
+        <p>There will be several workshops organized around topics that the Steering
           Committee will be addressing. The public is invited to participate in
           identifying needs and concerns to help create a vision for the future
           of East Harlem.</p>
           <a href="#calendar" class="button box-shadow">View the Calendar</a>
       </div>
-      <div class="columns small-11 medium-10 medium-pull-1 large-6 large-pull-0">
+      <div class="columns small-11 small-push-1 medium-10 large-6">
         <h3 class="">Topics</h3>
         <div class="panel relative">
           <span class="corner-bubble">&#10102;</span>
           <p class="no-margin"><strong>Open Space, Recreation, Culture</strong> <small class="jumbo"><em>led by NYRP</em></small></p>
-          <p class="no-margin"><strong>Culture</strong> <small class="jumbo"><em>led by El Musio del Barrio</em></small></p>
+          <p class="no-margin"><strong>Culture</strong> <small class="jumbo"><em>led by El Museo del Barrio</em></small></p>
         </div>
         <div class="panel relative">
           <span class="corner-bubble">&#10103;</span>
@@ -181,18 +188,52 @@
           <span class="corner-bubble">&#10104;</span>
           <p class="no-margin"><strong>Housing Preservation</strong> <small class="jumbo"><em>led by El Barrio Operation Fightback</em></small></p>
           <p class="no-margin"><strong>NYCHA</strong> <small class="jumbo"><em>led by Ethel Velez, Johnson houses</em></small></p>
-          <p class="no-margin"><strong>Environment, Transportation, Safety</strong> <small class="jumbo"><em>led by WEACT</em></small></p>
         </div>
         <div class="panel relative">
           <span class="corner-bubble">&#10105;</span>
           <p class="no-margin"><strong>Small Business, Economic Development, Workforce Development</strong> <small class="jumbo"><em>led by Union Settlement</em></small></p>
-          <p class="no-margin"><strong>Health, Seniors</strong> <small class="jumbo"><em>led by New York Academy of Medicine</em></small></p>
         </div>
         <div class="panel relative">
           <span class="corner-bubble">&#10106;</span>
           <p class="no-margin"><strong>Zoning/Land Use</strong> <small class="jumbo"><em>led by CIVITAS</em></small></p>
           <p class="no-margin"><strong>Affordable Housing Development</strong> <small class="jumbo"><em>led by Lott CDC</em></small></p>
         </div>
+        <div class="panel relative">
+          <span class="corner-bubble">&#10107;</span>
+          <p class="no-margin"><strong>Environment, Transportation, Safety</strong> <small class="jumbo"><em>led by WEACT</em></small></p>
+          <p class="no-margin"><strong>Health, Seniors</strong> <small class="jumbo"><em>led by New York Academy of Medicine</em></small></p>
+        </div>
+      </div>
+      <div class="columns">
+        <h3 class="">Our Facilitators</h3>
+      </div>
+      <div class="columns large-5">
+        <p>The facilitators were brought on to ensure a smooth flow of information and resources
+          across meetings, topic areas, and participants. They work directly with the Sub-Groups,
+          Steering Committee, and Community Members to develop implementable recommendations for
+          the East Harlem Neighborhood Plan.</p>
+      </div>
+      <div class="columns large-7 some-margin-bottom">
+        <p class="tiny-margin-bottom"><a href="http://www.wxystudio.com/"><strong>WXY Studio</strong></a> <br />A planning and architecture
+          firm with a focus on civic projects in NYC.</p>
+        <p class="extra-margin-bottom"><a href="http://hesterstreet.org/"><strong>Hester Street Collaborative</strong></a> <br />A planning,
+          design, and development non-profit organization that provides technical assistance
+          to underserved communities throughout NYC and the US.</p>
+      </div>
+      <div class="columns">
+        <h3 class="">Final Deliverables &amp; Goals</h3>
+      </div>
+      <div class="columns large-5">
+        <p>The plan will include a combination of short- and long-term projects and policies that
+          preserve the cultural diversity of East Harlem, including the ability for long-term residents
+          to stay in the neighborhood and enjoy the benefits of neighborhood change.</p>
+      </div>
+      <div class="columns large-7">
+        <ol>
+          <li>Inform the City’s rezoning process and related neighborhood planning, project and policy initiatives.</li>
+          <li>Create a community-based road map for long-term neighborhood growth and development.</li>
+          <li>Ensure long-term government accountability to community residents.</li>
+        </ol>
       </div>
     </div>
 
@@ -200,7 +241,7 @@
 
     <div class="row some-margin-bottom">
       <div class="columns">
-        <h3>We want to hear from you.</h3>
+        <h3>If you live or work in East Harlem, we want to hear from you.</h3>
       </div>
       <div class="columns medium-7">
         <p class="some-margin-bottom text-large">Please fill out our survey, attend
@@ -212,13 +253,13 @@
     </div>
     <div class="row">
       <div class="columns medium-5" id="calendar">
-        <h4 class="some-margin-bottom">Upcoming Public Meetings</h4>
+        <h3 class="some-margin-bottom">Upcoming Public Meetings</h3>
         <!-- Google Cal embed via http://sugi.github.io/jquery-gcal-flow/ -->
         <!-- TODO: Link to the right GCal -->
         <div id="gcf-simple"></div>
       </div>
       <div class="columns medium-7" id="documents">
-        <h4>Stay up to date!</h4>
+        <h3>Stay up to date!</h3>
         <p class="tiny-margin-bottom">We're still working on the East Harlem Neighborhood Plan. But here's
           the direction we are heading in so far.</p>
         <div class="google-drive some-margin-bottom">
@@ -228,17 +269,17 @@
       </div>
     </div>
 
-    <hr>
+    <hr id="steering-committee-members">
 
-    <div class="row" id="steering-committee-members">
+    <div class="row">
       <div class="columns">
         <h3 class="some-margin-bottom">Steering Committee Members</h3>
         <ul class="v-aligned-list small-block-grid-1 medium-block-grid-2 large-block-grid-4" data-equalizer data-options="equalize_on_stack: true">
-          <li class="text-center"><a href="http://www.seiu32bj.org/"><div class="panel no-margin" data-equalizer-watch>32BJ</div></a></li>
+          <li class="text-center"><a href="http://www.seiu32bj.org/"><div class="panel no-margin" data-equalizer-watch>32BJ SEIU</div></a></li>
           <li class="text-center"><a href="http://www.artimusnyc.com/"><div class="panel no-margin" data-equalizer-watch>Artimus Construction</div></a></li>
           <li class="text-center"><a href="http://unionsettlement.org/programs/business-development/"><div class="panel no-margin" data-equalizer-watch>Business Development Center&mdash;Union Settlement</div></a></li>
           <li class="text-center"><a href="http://civitasnyc.org/"><div class="panel no-margin" data-equalizer-watch>CIVITAS</div></a></li>
-          <li class="text-center"><a href="http://www.cb11m.org/"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Community Board 11</strong></div></a></li>
+          <li class="text-center"><a href="http://www.cb11m.org/"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Manhattan Community Board 11</strong></div></a></li>
           <li class="text-center"><a href="http://www.cvhaction.org/"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Community Voices Heard</strong></div></a></li>
           <li class="text-center"><a href="http://council.nyc.gov/d9/html/members/home.shtml"><div class="panel no-margin" data-equalizer-watch>Council Member Inez&nbsp;Dickens</div></a></li>
           <li class="text-center"><a href="http://www.ebofb.org/"><div class="panel no-margin" data-equalizer-watch>El Barrio's Operation Fightback</div></a></li>
@@ -251,13 +292,14 @@
           <li class="text-center"><a href="https://www.nyrp.org/"><div class="panel no-margin" data-equalizer-watch>New York Restoration Project</div></a></li>
           <li class="text-center"><a href="http://www.innovationhighschool.org/"><div class="panel no-margin" data-equalizer-watch>Renaissance Charter High School for Innovation</div></a></li>
           <li class="text-center"><a href="http://churches.rca.org/elmendorf/pastor.html"><div class="panel no-margin" data-equalizer-watch>Rev. Patricia Singletary, Elmendorf Reformed Church</div></a></li>
-          <li class="text-center"><a href="http://council.nyc.gov/d8/html/members/home.shtml"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Speaker Melissa Mark-Viverito</strong></div></a></li>
-          <li class="text-center"><a href="http://unionsettlement.org/"><div class="panel no-margin" data-equalizer-watch>Union Settlement&mdash;David Nocenti</div></a></li>
+          <li class="text-center"><a href="http://council.nyc.gov/d8/html/members/home.shtml"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Council Speaker Melissa Mark-Viverito</strong></div></a></li>
+          <li class="text-center"><a href="http://unionsettlement.org/"><div class="panel no-margin" data-equalizer-watch>Union Settlement</div></a></li>
           <li class="text-center"><a href="http://weact.nationbuilder.com/"><div class="panel no-margin" data-equalizer-watch>WEACT</div></a></li>
         </ul>
-        <div class="alert-box alert box-shadow"><em class="">* Project Partners will help
-          pull together the topic sub-groups, steering committee, and community
-          visioning workshops.</em></div>
+        <div class="alert-box alert box-shadow"><em class="">* Project Partners facilitate
+          relationships with relevant City Agencies and contribute to project connectivity,
+          and meeting facilitation of the topic subgroups, Steering Committee, and Community
+          Visioning Workshops.</em></div>
       </div>
     </div>
 
@@ -270,8 +312,8 @@
       <div class="columns medium-8 large-10">
         <br class="show-for-medium-up">
         <ul class="tiny-padding-top">
-          <li><strong><a href="http://council.nyc.gov/d8/html/members/home.shtml">Speaker Melissa Mark-Viverito</a></strong> &mdash; <strong>(212) 788-9121</strong></li>
-          <li><strong><a href="http://www.nyc.gov/html/qnscb11/html/home/home.shtml">Community Board 11</a></strong> &mdash; <strong>(212) 831-8929</strong></li>
+          <li><strong><a href="http://council.nyc.gov/d8/html/members/home.shtml">Council Speaker Melissa Mark-Viverito</a></strong> &mdash; <strong>(212) 788-9121</strong></li>
+          <li><strong><a href="http://www.nyc.gov/html/qnscb11/html/home/home.shtml">Manhattan Community Board 11</a></strong> &mdash; <strong>(212) 831-8929</strong></li>
           <li><strong><a href="http://www.cvhaction.org/">Community Voices Heard</a></strong> &mdash; <strong>(212) 860-6001</strong></li>
           <li><strong><a href="http://manhattanbp.nyc.gov/html/home/home.shtml">Manhattan Borough President Gale A. Brewer</a></strong> &mdash; <strong>(212) 669-8300</strong></li>
           <li><strong><a href="mailto:EHNhoodStudy@gmail.com">EHNhoodStudy@gmail.com</a></strong></li>
