update intro text

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           more affordable housing. To make sure the community’s voice is heard in this
           process, Speaker Melissa Mark-Viverito has initiated a Steering Committee to
           create the East&nbsp;Harlem Neighborhood Plan.</p> -->
-        <p class="text-large">The goal of the East Harlem Neighborhood Plan is to
-          develop a clear community-based strategy that will reflect an implementable
-          vision for the Neighborhood. Council Speaker Melissa Mark-Viverito along
-          with Community Board 11, Community Voices Heard, and Manhattan Borough
-          President Gale Brewer are leading an effort to engage community stakeholders
-          and local residents in a robust conversation about the future of the East Harlem.</p>
+        <p class="text-large">Welcome! The goal of the East Harlem Neighborhood Plan
+          is to develop a community-based vision and strategy for implementation.
+          New York City Council Speaker Melissa Mark-Viverito along with Community
+          Board 11, Community Voices Heard, and Manhattan Borough President Gale
+          Brewer are leading an effort to engage local residents and stakeholders
+          in meaningful conversations about the future of East Harlem.</p>
       </div>
     </div>
 
