--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <li class=""><a href="#contact">Contact</a></li>
           </ul>
           <!-- Right Nav Section -->
-          <ul class="right">
+          <!-- <ul class="right">
             <li class="active"><a href="#">English</a></li>
             <li class=""><a href="#">Español</a></li>
-          </ul>
+          </ul> -->
         </section>
       </nav>
     </div>
